--- a/Sampling_Manual.tex
+++ b/Sampling_Manual.tex
@@ -7,6 +7,8 @@
 \usepackage{color}
 \usepackage{enumitem}
 \usepackage{subcaption}
+\usepackage{amsmath}
+\usepackage{mathtools}
  
 
 
@@ -132,7 +134,154 @@ The exact steps required for a particular analysis can be quite complex, and som
 
 The system is now in a safe state and the cold trap can be allowed to warm back to room temperature. The remaining xenon can then be recovered or discarded as desired, after which the system should be pumped to vacuum before collecting the next sample. It is important to note that this pump-out should be done using TP2, since the RGA volume should be kept at vacuum except for maintenance. The bypass line, as configured, allows the cold-trap volume and sample volume to be pumped out independent of one another.
 
-\subsection{Analysis Scheme}
+\section{Vacuum Equations}
+\label{sec:vaceq}
+In order to optimize the sensitivity of the cold-trap system, it is good to have an understanding of the basics of vacuum physics. A vacuum system can be analogized to an electrical circuit, with pressure taking the place of voltage, flow rate ($Q$) taking the place of current, and impedance ($Z$) taking the place if resistance.  This analogy gives us with the equation:
+\begin{equation}
+\label{eq:vaclaw1}
+\Delta P = Q\cdot Z
+\end{equation} 
+Here, it is useful to define a new quantity, $S$, which is called the ``volumetric flow rate" or ``pumping speed''. $S$ is defined: 
+\begin{equation}
+\label{eq:volflow}
+S \equiv Av = \frac{dV}{dt}=Q/P, 
+\end{equation}
+where $A$ is the cross-sectional area of the pipe, and $v$ is the flow velocity, and $dV$ is the volume of gas which passes a point in the system in time $dt$. An effective pumping speed can be calculated for any point in the vacuum system through the equation:
+\begin{equation}
+\label{ep:vacimp}
+1/S_{eff} = 1/S_{p}+Z_{total}, 
+\end{equation}
+where $S_{p}$ is the speed of the pump which is acting on the system, and $Z_{total}$ is the total impedance between the pump and the specified point in the system. We can then calculate the steady-state pressure at any point in the system\cite{vac_eq}:
+\begin{equation}
+\label{eq:vaclaw2}
+P=Q/S_{eff}.
+\end{equation}
+
+\subsection{Cold Trap System at Steady State}
+\label{sec:steadystate}
+The RGA has a maximum operating pressure of $1\times 10^{-6}$ Torr, although we have found that operating at slightly higher pressures is possible with minimal degradation of the CDEM. This being the case, we place the requirement that the absolute pressure at the RGA be less than about $2\times 10^{-5}$ Torr. When analyzing xenon samples with a concentration of about one part per million or less, the xenon partial pressure, $PP_{Xe}$,  will dominate the absolute pressure. $PP_{Xe}$ is the sourced by the vapor above the xenon ice in the cold trap bleeding out of the cold-trap volume, into the RGA volume. The vapor pressure of xenon ice at liquid nitrogen temperature is $P_{ICE}=1.8\times 10^{-3}$ Torr, and so needs to be reduced by a factor of about 100 or more between the cold-trap and the RGA\cite{vaporpressure}. This is done by choosing appropriate system impedances, specifically the impedance between the cold-trap and the RGA ($Z_1$) and the impedance between the RGA and TP1 ($Z_2$). $Z_1$ and $Z_2$ can be adjusted using IV1 and IV2, respectively. It should be noted here that xenon at $1.8\times 10^{-3}$ Torr and 77 Kelvin in a $0.5"$ diameter cold trap has a Knudsen number of 0.6, and so is actually in the intermediate gas flow regime rather than the molecular flow regime\cite{vac_eq}. For the purposes of this document, we will use the molecular flow approximation to motivate and direct our empirical investigations.
+
+There are several compounding factors that come into play when deciding exactly what $PP_{Xe}$ should be. These will be discussed in later sections, so we will take it as given here that the sensitivity is optimized between $PP_{Xe}=5\times10^{-6}$ Torr, and $PP_{Xe}=2\times10^{-5}$ Torr, and is largely unaffected by deviations within this range. For the sake of simplicity, we will usually demand that $PP_{Xe}$ to be the default pressure that the system plumbing gives when IV1 and IV2 are maximized. For the system described above, the this pressure will be about $1\times 10^{-5}$ Torr. 
+
+Returning to the vacuum equations we will see that although we have artificially defined $PP_{Xe}$, $Z_1$ and $Z_2$ are not fully determined by this choice. By using equations \ref{eq:vaclaw1} and \ref{eq:vaclaw2}, and the requirement that $PP_{Xe}=1\times 10^{-5}$ Torr, we place a constraint on the impedances:
+\begin{equation}
+\label{eq:xepres1}
+Q_{Xe,RGA}=PP_{Xe}S_{RGA}=\frac{P_{ICE}-PP_{Xe}}{Z_1}\approx \frac{P_{ICE}}{Z_1},
+\end{equation}
+where $1/S_{RGA}=1/S_{TP1}+Z_2$. This gives,
+\begin{equation}
+\label{eq:impconstraint}
+S_{RGA}\cdot Z_1= \frac{P_{ICE}}{PP_{Xe}} = 180.
+\end{equation}
+$S_{RGA}$ is usually dominated by the impedance between the RGA and TP1. Depending on the model used, the speed of the turbo pump for xenon is around 50 liters per second. The impedance of cylindrical plumbing with a diameter of 1.5 inches is about $\frac{1}{320} s/L$ per centimeter of plumbing.\cite{vac_eq} In an ideal system there will be at least 1 foot of plumbing between the RGA and TP1, so the maximum value of $S_{RGA}$ is roughly 8.3 liters per second for xenon. Vacuum impedance is different for different molecules and is proportional to one over the square root of the atomic mass, so the maximum value of $S_{RGA}$ for krypton will be roughly 10.4 liters per second.\cite{vac_eq} This puts the nominal value of $Z_1$ at about 21.7 seconds per liter for xenon and 17.3 seconds per liter for krypton.The exact numerical value of $S_{RGA}$ and $Z_1$ are largely unimportant, and when optimizing the system impedances as described in section \ref{sec:impedance}, we will work in units relative to the fully open state, rather than liters per second.
+
+The operating principle of cold-trap sampling is that while the xenon gets frozen into the cold-trap, the trace gasses, such as krypton pass through. Another way to put this is that at the output of the cold trap the xenon is frozen to a constant pressure, while krypton mass flow is conserved. In practice, the conservation is not perfect, so we add a throughput constant, $\alpha \equiv Q_{Kr,RGA}/Q_{Kr,CT}$, where $Q_{Kr,CT}$ is the flow rate into the cold trap, and $Q_{Kr,RGA}$ is the equilibrium flow rate of krypton out of the trap, and the flow rate of xenon into the cold-trap ($Q_{Xe,CT}$) is constant. The physical basis of the throughput parameter is not fully understood, but we have put great effort into characterizing it empirically. $Q_{Kr,CT}$ is equal to $Q_{Xe,CT}$ times the concentration of krypton in the xenon sample, $\Phi_{Kr}$. These relations put together, give us the following equation: 
+\begin{equation}
+Q_{Kr,RGA}=\alpha Q_{Xe,CT}\Phi_{Kr}.
+\end{equation}
+Plugging this into the vacuum equations, we can find the relationship between the parameter of interest, $\Phi_{Kr}$, and the measurable quantities, $Q_{Xe_0}$ and $PP_{Kr,eq}$:
+\begin{equation}
+\label{eq:krpres1}
+PP_{Kr,eq}=\frac{\alpha}{S_{RGA}}Q_{Xe,CT}\Phi_{Kr}.
+\end{equation}
+This relation shows the proportionality between partial pressure, and flow-rate times concentration that was found experimentally in \cite{sampling_doug} and \cite{sampling_dm}. By imposing the constraint from equation \ref{eq:impconstraint} we can see how altering the system impedance is expected to affect $PP_{Kr,eq}$, the equilibrium pressure of krypton at the RGA:
+\begin{equation}
+\label{eq:krpres2}
+PP_{Kr,eq}=\frac{\alpha}{180}Z_{1}Q_{Xe,CT}\Phi_{Kr}.
+\end{equation}
+This equation replicates equation \ref{eq:basic_analysis} where the calibration constant, $C$, has been replaced with $\frac{\alpha}{180}Z_{1}$. 
+
+\subsection{Transient Response of Cold Trap System}
+From the vacuum equations, we can also find the expected response of the system to an impulse of krypton. To do so, we would like to make the assumption that the RGA volume and the cold trap volume have a vanishingly small internal impedance, which means that the pressure at the input is equal to the pressure at the output. This is reasonable for the RGA volume which is constructed of 1.5 inch plumbing, but the bends in the cold trap add enough impedance to violate the approximation. We find that this approximation is able to produce reasonable results in the limit of small xenon flow rate and small xenon sample size. 
+
+In a volume with no internal impedance , the amount of krypton contained by that volume is defined as $P_{Kr}V$. If the volume is being evacuated at a constant volumetric rate, $S$, while at the same time being sourced by some time-dependent flow rate, $Q(t)$ the amount of krypton will change according to the equation:
+\begin{equation}
+V\frac{dP_{Kr}}{dt}=Q(t)-SP_{Kr}.
+\end{equation}
+The response of $P_{Kr}(t)$ to an impulse of flow, $Q(t)=P_0V\delta(t)$ is then:
+\begin{equation}
+P_{Kr}(t>0)=P_0e^{-t/\tau},
+\end{equation}
+where $\tau = V/S$. The time dependent $P_{Kr}(t)$ can then be found by convolving $Q(t)$ with this impulse response.
+
+Applying this impulse response to the RGA volume ($V_{RGA}$) and cold trap volume ($V_{CT}$), we can find an expected time dependence of the krypton RGA pressure, $P_{Kr,RGA}(t)$. The flow rate into the RGA volume is equal to the flow rate out of the cold trap volume, so it is given by:
+\begin{equation}
+Q_{Kr,RGA}(t)=\frac{P_{Kr,CT}(t)}{Z_1+1/S_{RGA}}\approx P_{Kr,CT}(t)/Z_1,
+\end{equation}
+where $P_{Kr,CT}(t)$ is the time-dependent pressure of krypton in the cold trap volume. So to calculate the expected $P_{Kr,RGA}(t)$, we must first calculate $P_{Kr,CT}(t)$. This can be done by convolving the the known flow of krypton into the trap, $Q_{Kr,CT}=\Phi Q_{Xe,CT}(t)$, with the impulse response of the cold trap volume. We can then convolve the resulting $Q_{Kr,RGA}(t)$ with the response of the RGA volume to predict the overall response of the system to the input flow rate. 
+
+The response time for the cold trap volume will be given by:
+\begin{equation}
+\tau_{CT}=V_{CT}\frac{1}{Z_1+1/S_{RGA}} \approx V_{CT}Z_1,
+\label{eq:CTtime}
+\end{equation}
+and the response time for the RGA volume will be given by:
+\begin{equation}
+\tau_{RGA}=V_{RGA}/S_{RGA}.
+\end{equation}
+The condition $Z_1S_{RGA}=180$ from equation \ref{eq:impconstraint}, combined with the fact that in a typical system, $V_{RGA}\approx V_{CT}$ we see that the RGA volume is expected to respond much more quickly than the cold trap volume. This means that the overall response of the system will be dominated by the response of the cold trap, and the shape of $P_{Kr,RGA}$ will be well approximated by the shape of $P_{Kr,CT}$.
+
+A typical flow rate profile for xenon is described by:
+\begin{equation}
+\label{eq:flowprofile}
+Q_{Xe,CT}(t) =
+  \begin{cases}
+    Q_0&\textrm{ for } \leq t\leq T\\
+    0     &\textrm{ otherwise}
+  \end{cases}
+\end{equation}
+If $Q_{Xe,CT}(t)$ is given by equation \ref{eq:flowprofile}, the instantaneous krypton pressure in the cold trap will be given by: 
+\begin{equation}
+\label{eq:CTresponse}
+\frac{P_{Kr,CT}(t)}{\Phi Q_0Z_1}=
+\begin{cases}
+0 & \textrm{ for } t<0\\
+1-e^{-\frac{t}{\tau_{CT}}} & \textrm{ for } 0\leq t \leq T\\
+(1-e^{-\frac{T}{\tau_{CT}}})e^{-\frac{t-T}{\tau_{CT}}}& \textrm{ for }  t > T
+\end{cases}
+\end{equation} 
+This is proportional to the shape function, $f_Q(t)$, that was presented in equation \ref{eq:shapefunc}. Applying the response of the RGA volume gives the result:
+\begin{equation}
+\label{eq:fullresponse}
+\frac{P_{Kr,RGA}(t)}{\Phi Q_0 /S_{RGA}}=
+\begin{cases}
+0 & \textrm{ for } t<0\\
+1-e^{-\frac{t}{\tau_{RGA}}}-\frac{e^{-\frac{t}{\tau_{CT}}}-e^{-\frac{t}{\tau_{RGA}}}}{1-\tau_{RGA}/\tau_{CT}} & \textrm{ for } 0\leq t \leq T\\
+e^{-\frac{t-T}{\tau_{RGA}}}(1-e^{-\frac{T}{\tau_{RGA}}}-\frac{e^{-\frac{T}{\tau_{CT}}}-e^{-\frac{T}{\tau_{RGA}}}}{1-\tau_{RGA}/\tau_{CT}} ) ...\\
+ +\frac{e^{\frac{T}{\tau_{CT}}}-1}{1-\tau_{RGA}/\tau_{CT}}(e^{-\frac{t}{\tau_{CT}}}-e^{-\frac{t}{\tau_{RGA}}+T(1/\tau_{RGA}-1/\tau_{CT})}) & \textrm{ for }  t > T
+\end{cases}
+\end{equation} 
+Note that in the limit $\tau_{RGA}<<\tau_{CT}$, the right side of equation \ref{eq:fullresponse} reduces to the right side of equation \ref{eq:CTresponse}.
+
+Equation \ref{eq:CTresponse} does a fairly good job in predicting the shape of $P_{Kr,RGA}$ when $Q_0$ and $Z_1$ are small as seen in figure \ref{fig:RGAtrace_fast}. A fit to equation \ref{eq:CTresponse} produces a best fit time constant of 12.2 seconds. The volume of the cold trap used for this trace is 183.8 cc, which would point to $Z_1=66.7$ seconds per liter and $S_{RGA}=2.70$ liters per second. {\color{red} This is not unreasonable given the length of plumbing between the RGA and the turbo pump in this system is .... Corrected for RGA gain, t45he equilibrium pressure of this trace is $50.8 \pm 0.4$ pTorr. $\Phi$ was known to be $750 \pm 75$ parts per trillion (ppt) in liters of krypton per liter of xenon. The xenon flow rate used was 4.5 Torr liters per second. }
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=\textwidth]{Figures/RGATrace_fit_fast.png}
+\caption{RGA trace with nominal impedance settings.}
+\label{fig:RGAtrace_fast}
+\end{figure}
+
+
+\subsection{Entrapment of Krypton}
+Fitting the krypton pressure trace, $P_{Kr,RGA}(t)$ to equation \ref{eq:CTresponse} breaks down at high xenon flow rates and high system impedances. We don't know the physical cause of this breakdown, but it is likely tied to the krypton throughput parameter, $\alpha$, that was introduced in section \ref{sec:steadystate}. Consider the pressure trace shown in figure \ref{fig:RGAtrace_slow}; the xenon flow rate, $Q_0$ and krypton concentration, $\Phi$ were identical to the krypton trace in figure \ref{fig:RGAtrace_fast}, and the impedance, $Z_1$ was set to be 45 time higher. This trace deviates significantly from what would be expected by increasing $Z_1$ in equation \ref{fig:CTresponse}. Both the system response time and equilibrium pressure are expected to increase proportional to $Z_1$ from equations \ref{eq:CTtime} and \ref{eq:krpres2}, but had a significantly smaller increase. $PP_{Kr,eq}$ increased from $50.8 \pm 0.4$ to $399.9\pm 1.7$ pTorr; a factor of 7.9. The overall response time, $\tau$, increased from $12.7 \pm 0.7$ to $93.4 \pm 1.8$ seconds; a factor of 7.4. 
+\begin{figure}[h!]
+\centering
+\includegraphics[width=\textwidth]{Figures/RGAtrace_fit_slow_wexp.png}
+\caption{RGA trace with 45 times nominal impedance settings. }
+\label{fig:RGAtrace_slow}
+\end{figure}
+
+Although $PP_{Kr,eq}$ and $\tau$ no not remain proportional to $Z_1$, they do remain proportional to each other. 
+
+
+
+
+
+
+
+
+\section{Analysis Scheme}
 The physical value we are interested in measuring is the concentration of an impurity, specifically krypton, in a sample of xenon gas. This value is typically referred to as $\Phi$ and cited in units of grams of krypton per gram of xenon. The calculation of $\Phi$ is done using the RGA partial pressure data collected between steps \ref{step:analysis_start} and \ref{step:analysis_stop} of the procedure outlined in section \ref{sec:outline}. An example of this data is shown in figure \ref{fig:RGAtrace}. 
 
 \begin{figure}[h!]
@@ -149,47 +298,98 @@ There are four distinct time-intervals in figure \ref{fig:RGAtrace} labelled I t
 \item IV is the period of time after the xenon flow has been stopped (step \ref{step:stop_flow}). During this period the krypton pressure will fall away exponentially before it eventually returns to the baseline value.
 \end{itemize}
 
-$\Phi$ is extracted from the RGA pressure trace using the equation:
+When the flow of krypton has equilibrated throughout the system, $\Phi$ can be related to the flow rate and RGA krypton partial pressure through the following equation: 
 \begin{equation}
 \label{eq:basic_analysis}
-\frac{PP_{Kr,i}-\overline{PP}_{Kr,0}}{Q_{Xe,i}}=C\Phi,
+\Phi=\frac{P_{Kr,RGA}}{CQ_{Xe,CT}},
 \end{equation}
-where $C$ is a calibration constant which encapsulates the sensitivity of the system and $Q_{Xe,i}$ is the instantaneous flow rate of xenon into the cold trap. $PP_{Kr,i}$ is a krypton pressure data point measured in the equilibrium region (III). It is possible that there is a physical background seen by the RGA at the mass of interest (84 amu for the case of krypton), but we are only interested in the pressure which is extracted from the xenon sample. To account for any non-zero baseline we subtract out $\overline{PP}_{Kr,0}$, the average krypton pressure measured by the RGA during region I. 
+where $C$ is a calibration constant which encapsulates the sensitivity of the system, $Q_{Xe,CT}$ is the instantaneous flow rate of xenon into the cold trap, and $P_{Kr,RGA}$ is the krypton pressure. It is possible that there is a physical background seen by the RGA at the mass of interest (84 amu for the case of krypton), but we are only interested in the pressure which is extracted from the xenon sample. To account for any non-zero baseline we subtract out $\overline{PP}_{Kr,0}$, the average krypton pressure measured by the RGA during region I. 
 
-The simplest way to calculate the purity from equation \ref{eq:basic_analysis} is to average over all of the data points in region III:
+When paired with a concurrent flow-rate measurement, $Q_{Xe,i}$, each RGA data point, $PP_{Kr,i}$, collected in region III will give an individual measurement of the purity of the xenon sample, $\phi_i$:
 \begin{equation}
-\Phi=\frac{1}{CN}\sum_{i=1}^{N}\frac{PP_{Kr,i}-\overline{PP}_{Kr,0}}{Q_{Xe,i}}
+\phi_i=\frac{1}{C}\frac{PP_{Kr,i}-\overline{PP}_{Kr,0}}{Q_{Xe,i}}.
+\label{eq:single_analysis}
+\end{equation}
+We take the average of these individual purity measurements as the final result of the analysis:
+\begin{equation}
+\Phi=\overline{\phi_i},
 \label{eq:average_analysis}
 \end{equation}
-In high-sensitivity measurements, the sample volume may be exhausted before the krypton pressure equilibrates, so we must allow $PP_{Kr,i}$ to be drawn from the non-equilibrium regions II and IV, as well as region III. In these cases we integrate equation \ref{eq:basic_analysis} to give us:
+with $N$ being the number of RGA data points collected in region III. The random uncertainty on this purity result is taken to be the standard error:
+\begin{equation}
+\sigma_{\Phi}=\frac{\sigma{\phi}}{\sqrt{N}},
+\label{eq:average_error}
+\end{equation}
+where $\sigma_{\phi}$ is the standard deviation of the collection of $\phi_i$'s. This method of analysis has been previously shown to be linear with purity. \cite{sampling_doug,sampling_dm,sampling_EXO}
+\begin{figure}[h!]
+  \includegraphics[width=\linewidth]{Figures/Lin_avg_Attila.png}
+  \caption{The linearity of the averaging analysis method. The slope of this line will be equal to the calibration constant, $C$.\cite{sampling_dm} }
+  \label{fig:linplot_attila}
+\end{figure}
+
+In order to maximize the krypton sensitivity, we operate in a high-impedance mode (described in later sections) which increases the rise and fall time of the krypton pressure. This being the case, we wish to allow $PP_{Kr,i}$ to be drawn from the non-equilibrium regions II and IV, as well as region III. This In these cases we assume a more general version of equation \ref{eq:basic_analysis}:
+\begin{equation}
+\label{eq:gen_analysis}
+P_{Kr,RGA}(t)=C\Phi f_{Q}(t),
+\end{equation}
+where $f_{Q}(t)$ is some function which defines the shape of the krypton pressure trace, given a specific flow rate profile, $Q_{Xe,CT}(t)$. $\Phi f_{Q}(t)$ represents the flow of krypton out of the cold trap, $Q_{Kr,RGA}(t)$, and can be thought of as the input krypton flow, $Q_{Kr,CT}=\Phi Q_{Xe,CT}$, modified by the response of the system. Equation \ref{eq:gen_analysis} will be valid as long as the response is linear with concentration. For example, consider the krypton trace shown in figure \ref{fig:RGAtrace}. The flow rate profile for this trace is:
+
+In section \ref{sec:vaceq} we find that an ideal system is expected to have an exponential response to flow. Convolving equation \ref{eq:flowprofile} with an exponential response yields the following shape function
+\begin{equation}
+\label{eq:shapefunc}
+f_Q(t) = Q_0
+  \begin{cases}
+    0&\textrm{ for $t$ in region I}\\
+    1-\exp(-\frac{t-t_1}{\tau})&\textrm{ for $t$ in region II or III}\\
+    \exp(-\frac{t-t_2}{\tau})&\textrm{ for $t$ in region IV}
+  \end{cases}
+\end{equation}
+Fitting this shape function to the data in figure \ref{fig:RGAtrace} gives $\tau = 11.6$ seconds. It should be noted here that the pressure trace shown in figure \ref{fig:RGAtrace2} does not fit this shape. This is because the response of the system to flow becomes non-linear at high flow rate and high impedances. Figure \ref{fig:intlin} shows that response does remain linear in concentration even when it is not linear in flow.
+
+We now integrate equation \ref{eq:gen_analysis} between some $t_1$ and $t_2$:
+\begin{equation}
+\int_{t_1}^{t_2}P_{Kr,RGA}dt=\Phi F_{Q,t_1,t_2},
+\end{equation}
+where:
+\begin{equation}
+F_{Q,t_1,t_2}\equiv \int_{t_1}^{t_2}f_{Q}(t) dt.
+\end{equation}
+In terms of the discrete RGA measurements, $PP_{Kr,i}$ this becomes:
 \begin{equation}
 \label{eq:int_analysis}
-\Phi=\frac{1}{CV\Delta P_{Xe}}\sum_{i=1}^{N} (PP_{Kr,i}-\overline{PP}_{Kr,0})\Delta t_i
+\Phi=\frac{1}{F_{Q,t_1,t_2}C}\sum_{i=1}^{N} (PP_{Kr,i}-\overline{PP}_{Kr,0})\Delta t_i.
+%\Phi=\frac{1}{CV\Delta P_{Xe}}\sum_{i=1}^{N} (PP_{Kr,i}-\overline{PP}_{Kr,0})\Delta t_i
 \end{equation}
-where $V$ is the volume of the sample volume and $\Delta P_{Xe}$ is the total drop in xenon pressure in the sample volume. In figure \ref{fig:linplot} we see that this method is linear in $\Phi$ even though we are including the non-equilibrium values of $PP_{Kr}$ in our analysis.
+$F_{Q,t_1,t_2}C$ is a constant of proportionality which can be measured by analyzing a xenon sample with a known $\Phi$. However, this constant will only hold so long as $Q_{Xe,CT}(t)$, $t_1$, and $t_2$ are identical between the analysis and calibration runs. To ensure consistency, it is best practice to calibrate after every sample analysis. These calibrations should follow the procedure described in section \ref{sec:calibrations} and should use the left-over sample xenon which is recovered from the cold trap as the base ``clean'' xenon. This can be done as long as the initial concentration of krypton in the xenon sample is much less than the target concentration of the calibration xenon.
+
 \begin{figure}[h!]
 \centering
 \begin{subfigure}{0.5\textwidth}
   \centering
   \includegraphics[width=\textwidth]{Figures/RGATrace_int.png}
   \caption{Sample RGA trace.}
+  \label{fig:RGAtrace2}
 \end{subfigure}%
 \begin{subfigure}{0.5\textwidth}
   \centering
   \includegraphics[width=\textwidth]{Figures/LinPlot0217.png}
   \caption{Linearity of analysis.}
+  \label{fig:intlin}
 \end{subfigure}
-\caption{Linearity of the integration-style analysis described in equation \ref{eq:int_analysis}. The krypton signals used in these measurements never reached an equilibrium value.}
+\caption{Linearity of the integration-style analysis described in equation \ref{eq:int_analysis}. The krypton signals used in these measurements never reached an equilibrium value. The xenon flow profile for theses measurements was a square pulse. The height of this pulse was set using an MFC, and the time-width of the pulse was defined by the size of the xenon sample used. $t_1$ was defined as the start of the xenon flow, plus 20 seconds, and $t_2$ was defined as the stop of the xenon flow, plus 20 seconds.}
 \label{fig:linplot}
 \end{figure}
 
-
-The data collected in region I is also used to estimate the error on the measurement. The fluctuations of the RGA tend to increase at higher partial pressure, as shown in figure \ref{fig:RGAnoise}. We take the baseline fluctuations, $\sigma_0$, to be equal to the standard deviation of the region I data points. The random uncertainty of each data point, $PP_{Kr,i}$, is then taken to be:
+The random uncertainty of purity results calculated using equation \ref{eq:int_analysis} are harder to estimate than those calculated using equation \ref{eq:average_analysis}. The fluctuations around each datapoint cannot be measured directly, so they are estimated using the baseline data collected in region I. The fluctuations of the RGA tend to increase at higher partial pressure, as shown in figure \ref{fig:RGAnoise}. We take the baseline fluctuations, $\sigma_0$, to be equal to the standard deviation of the region I data points. The random uncertainty of each data point, $PP_{Kr,i}$, is then taken to be:
+{\color{red}
 \begin{equation}
 \sigma_i=\sigma_{0}*(1+0.009*PP_{Kr,i}).
+\end{equation}}
+The propagation of this error to $\Phi$ is then:
+\begin{equation}
+\sigma_{\Phi}^2=\frac{1}{F_{Q,t_1,t_2}^2C^2}\sum_{i=1}^{N}(\sigma_i^2+\sigma_0^2/N_B)\Delta t_i,
 \end{equation}
-
-
+where $N_B$ is the number of data points used in the calculation of $\overline{PP}_{Kr,0}$ and $\sigma_0$.
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{Figures/RGA_Noise_v_PP.png}
   \caption{The trend in RGA fluctuations as a function of partial pressure. The noise ratio is defined as the fraction by which the RGA fluctuations increase when the partial pressure is increased from its baseline value ($\textrm{Noise ratio} \equiv \sigma(PP)/\sigma(baseline)$). }
@@ -197,75 +397,12 @@ The data collected in region I is also used to estimate the error on the measure
 \end{figure}
 
 
-\subsection{Vacuum Equations}
-In order to optimize the sensitivity of the cold-trap system, it is good to have an understanding of the basics of vacuum physics. A vacuum system can be analogized to an electrical circuit, with pressure taking the place of voltage, flow rate ($Q$) taking the place of current, and impedance ($Z$) taking the place if resistance.  This analogy gives us with the equation:
-\begin{equation}
-\label{eq:vaclaw1}
-\Delta P = Q\cdot Z
-\end{equation} 
-Here, it is useful to define a new quantity, $S$, which is called the ``volumetric flow rate" or ``pumping speed''. $S$ is defined: 
-\begin{equation}
-\label{ep:volflow}
-S \equiv Av = \frac{dV}{dt}, 
-\end{equation}
-where $A$ is the cross-sectional area of the pipe, and $v$ is the flow velocity, and $dV$ is the volume of gas which passes a point in the system in time $dt$. An effective pumping speed can be calculated for any point in the vacuum system through the equation:
-\begin{equation}
-\label{ep:vacimp}
-1/S_{eff} = 1/S_{p}+Z_{total}, 
-\end{equation}
-where $S_{p}$ is the speed of the pump which is acting on the system, and $Z_{total}$ is the total impedance between the pump and the specified point in the system. By combining equation \ref{eq:volflow} with the definition of $Q$,
-\begin{equation}
-\label{ep:vacflow}
-Q \equiv P\frac{dV}{dt},
-\end{equation}
-we are left with an extremely useful relation which relates the vacuum system parameters to the pressure at any point in the system\cite{vac_eq}:
-\begin{equation}
-\label{eq:vaclaw2}
-Q \equiv P\cdot S_{eff}.
-\end{equation}
-
-The RGA has a maximum operating pressure of $1\times 10^{-6}$ Torr, although we have found that operating at slightly higher pressures is possible with minimal degradation of the CDEM. This being the case, we place the requirement that the absolute pressure at the RGA be less than about $2\times 10^{-5}$ Torr. When analyzing xenon samples with a concentration of about one part per million or less, the xenon partial pressure, $PP_{Xe}$,  will dominate the absolute pressure. $PP_{Xe}$ is the sourced by the vapor above the xenon ice in the cold trap bleeding out of the cold-trap volume, into the RGA volume. The vapor pressure of xenon ice at liquid nitrogen temperature is $P_{ICE}=1.8\times 10^{-3}$ Torr, and so needs to be reduced by a factor of about 100 or more between the cold-trap and the RGA\cite{vaporpressure}. This is done by choosing appropriate system impedances, specifically the impedance between the cold-trap and the RGA ($Z_1$) and the impedance between the RGA and TP1 ($Z_2$). $Z_1$ and $Z_2$ can be adjusted using IV1 and IV2, respectively. It should be noted here that xenon at $1.8\times 10^{-3}$ Torr and 77 Kelvin in a $0.5"$ diameter cold trap has a Knudsen number of 0.6, and so is actually in the intermediate gas flow regime rather than the molecular flow regime\cite{vac_eq}. For the purposes of this document, we will use the molecular flow approximation to motivate and direct our empirical investigations.
-
-There are several compounding factors that come into play when deciding exactly what $PP_{Xe}$ should be. These will be discussed in later sections, so we will take it as given here that the sensitivity is optimized between $PP_{Xe}=5\times10^{-6}$ Torr, and $PP_{Xe}=2\times10^{-5}$ Torr, and is largely unaffected by deviations within this range. For the sake of simplicity, we will usually demand that $PP_{Xe}$ to be the default pressure that the system plumbing gives when IV1 and IV2 are maximized. For the system described above, the this pressure will be about $1\times 10^{-5}$ Torr. 
-
-Returning to the vacuum equations we will see that although we have artificially defined $PP_{Xe}$, $Z_1$ and $Z_2$ are not fully determined by this choice. By using equations \ref{eq:vaclaw1} and \ref{eq:vaclaw2}, and the requirement that $PP_{Xe}=1\times 10^{-5}$ Torr, we place a constraint on the impedances:
-\begin{equation}
-\label{eq:xepres1}
-Q_{Xe,RGA}=PP_{Xe}S_{RGA}=\frac{P_{ICE}-PP_{Xe}}{Z_1}\approx \frac{P_{ICE}}{Z_1},
-\end{equation}
-where $1/S_{RGA}=1/S_{TP1}+Z_2$. This gives,
-\begin{equation}
-\label{eq:impconstraint}
-S_{RGA}\cdot Z_1= \frac{P_{ICE}}{PP_{Xe}} = 180.
-\end{equation}
-The exact numerical value of $S_{RGA}\cdot Z_1$ is less important than is the fact that for whatever amount $Z_1$ is increased, $S_{RGA}$ must be decreased proportionally in order to maintain the optimal $PP_{Xe}$. This means that $PP_{Xe}$ is held constant, regardless of $Z_1$.
-
-The operating principle of cold-trap sampling is that while the xenon gets frozen into the cold-trap, the trace gasses, such as krypton pass through. Another way to put this is that at the output of the cold trap the xenon is frozen to a constant pressure, while krypton mass flow ($Q_{Kr,out}$) is conserved. In practice, the conservation is not perfect, so we add a throughput constant, $\alpha \equiv Q_{Kr,out}/Q_{Kr,in}$, where $Q_{Kr,in}$ is the flow rate into the cold trap. The physical basis of the throughput parameter is not known, but we have put great effort into characterizing it empirically. $Q_{Kr,in}$ is equal to the flow rate of xenon into the cold-trap ($Q_{Xe,CT}$) times the concentration of krypton in the xenon sample, $\Phi_{Kr}$. Put together, we get the following equation: 
-\begin{equation}
-Q_{Kr,out}=\alpha Q_{Xe,CT}\Phi_{Kr}.
-\end{equation}
-Plugging this into the vacuum equations, we can find the relationship between the parameter of interest, $\Phi_{Kr}$, and the measurable quantities, $Q_{Xe_0}$ and $PP_{Kr}$:
-\begin{equation}
-\label{eq:krpres1}
-PP_{Kr}=\frac{\alpha}{S_{RGA}}\Phi_{Kr}Q_{Xe,CT}.
-\end{equation}
-This relation shows the proportionality between partial pressure, and flow-rate times concentration that was found experimentally in \cite{sampling_doug} and \cite{sampling_dm}. By imposing the constraint from equation \ref{eq:impconstraint} we can see how altering the system impedance is expected to affect $PP_{Kr}$:
-\begin{equation}
-\label{eq:krpres2}
-PP_{Kr}=\frac{\alpha}{180}Z_{1}\Phi_{Kr}Q_{Xe,CT}.
-\end{equation}
-
-This equation replicates equations \ref{eq:average_analysis} and \ref{eq:int_analysis} where the calibration constant, $C$ from equation \ref{eq:average_analysis} has been replaced with $\frac{\alpha}{180}Z_{1}$. We now have a physical basis for our analysis technique and a clear path to take in optimizing the cold trap sampling technique. 
-
 \section{System Parameters and Optimization}
-Optimizing a cold-trap sampling system is a matter of maximizing the signal to noise ratio. We assume for now that the RGA noise has Gaussian fluctuations with standard deviation $\sigma$. This Consider an idealized version of figure \ref{fig:RGAtrace} where the rise and fall were instantaneous, so that the pressure trace was given by a square pulse of height $PP_{Kr,eq}$. The width of this pulse will be given by the amount of xenon used in the analysis ($V\Delta P$) divided by the flow rate of the xenon into the cold trap $Q_{Xe,CT}$. Both the averaging method from equation \ref{eq:average_analysis}, and the integration method from equation \ref{eq:int_analysis} would give a signal-to-noise proportional to $1/\sqrt{N}$, with $N$ being the number of data points in the top of the square pulse. Using a constant RGA sampling rate of $r$ we find that the expression for signal to noise in either case will be:
-\begin{equation}
-\frac{signal}{sigma_{total}}=\overline{PP}
-\end{equation}
+Optimizing a cold-trap sampling system is a matter of maximizing the signal to noise ratio, which comes down to minimizing the fluctuations in the RGA baseline and maximizing the system response to krypton. There are several knobs and dials to turn to achieve this, but adjusting one of the knobs might change how one of the dials affects the sensitivity. This section will attempt to catalog the affect of these adjustments in an empirical way and will describe the optimal arrangement.
  
 
 \subsection{RGA Parameters} 
-There is a long list of internal RGA parameters which should be understood before operating a cold trap system. These can be found in chapter 6 of the \href{http://www.thinksrs.com/downloads/PDFs/Manuals/RGAm.pdf}{RGA manual}. The two parameters that have the greatest effect on the sensitivity to krypton are the noise floor and the high-voltage setting of the continuous dynode electron multiplier (CDEM). 
+The first and simplest adjustments to be made are to the RGA electronics. These adjustments can be made quickly and easily, and are largely independent from the other knobs and dials. There is a long list of internal RGA parameters which should be understood before operating a cold trap system. These can be found in chapter 6 of the \href{http://www.thinksrs.com/downloads/PDFs/Manuals/RGAm.pdf}{RGA manual}. The two parameters that have the greatest effect on the sensitivity to krypton are the noise floor and the high-voltage setting of the continuous dynode electron multiplier (CDEM). 
 
 The noise floor sets the scan speed of the RGA; the lower the noise floor setting, the longer the RGA will spend integrating current on a single mass point. The practical effects are threefold. The obvious first implication is that with a low noise floor, it will take much longer to to collect a single data point. At a noise floor setting of 0 the RGA will sit on a mass point for more than 5 seconds, and at a noise floor setting of 3 it will sit for less than 0.5 seconds per mass. For high-sensitivity analysis, it is better to have the noise floor set as low as possible, which will give you fewer data points which have a smaller variance. This will reduce the amount of time spent communicating with the RGA, as well as the amount of down time between communications. 
 
@@ -281,16 +418,25 @@ Setting the voltage on the CDEM is a balancing act. Increasing the voltage incre
 
 The health of the CDEM can be tracked using one of the xenon ice peaks, assuming the MG and SP parameters are not changed. MG is the CDEM gain factor and SP is the mass sensitivity factor used to convert the RGA current to partial pressure. The physical values may change over time, but the parameter stored in the RGA memory will not change unless a head-calibration is run. In particular, as the CDEM degrades, the gain will fall. A drift in the gain will bee seen most easily as a drop in the measured xenon ice pressure. Since the vapor pressure of xenon ice at 77 Kelvin is physically constant, if this pressure reading drops, it indicates that the gain has dropped. To maintain the CDEM gain, the xenon peak at 62 amu should be monitored. Whenever this value drops, the voltage should be increased until the pressure returns to its initial value.
 
-\subsection{Flow Rate}
 
+\subsection{Flow Rate}
+Consider the idealized pressure trace shown in figure \ref{fig:RGAtrace_ideal}, which is the result of a rectangular flow rate profile into a system which has an instantaneous response. The flat top of this trace will have a height of $PP_{Kr,eq}=C$.  The width of this pulse will be given by the amount of xenon used in the analysis ($V\Delta P$) divided by the flow rate of the xenon into the cold trap $Q_{Xe,CT}$. Both the averaging method from equation \ref{eq:average_analysis}, and the integration method from equation \ref{eq:int_analysis} would give a signal-to-noise proportional to $1/\sqrt{N}$, with $N$ being the number of data points in the top of the square pulse. Using a constant RGA sampling rate of $r$ we find that the expression for signal to noise in either case will be:
 
 \begin{figure}[h]
-  \includegraphics[width=\linewidth]{Figures/FlowResponse.png}
+  \includegraphics[width=\linewidth]{Figures/RGAtrace_ideal.png}
   \caption{Peak krypton RGA pressure as a function of flow rate.  }
   \label{fig:flowresponse1x}
 \end{figure}
+\begin{figure}[h]
+  \includegraphics[width=\linewidth]{Figures/FlowResponse.png}
+  \caption{Peak krypton RGA pressure as a function of flow rate.  }
+  \label{fig:RGAtrace_ideal}
+\end{figure}
 
 \subsection{Impedance}
+With the RGA sensitivity optimized, we now aim to maximize the krypton pressure which it is attempting to measure. To this end, we return to equation \ref{eq:krpres2}, which indicates that in addition 
+
+
 
 \subsection{System Geometry}
 \label{sec:geometry}
