--- a/main.bib
+++ b/main.bib
@@ -106,3 +106,13 @@ keywords = "Sublimation",
 keywords = "Pressure",
 keywords = "Enthalpy: Clapeyron equation "
 }
+
+@phdthesis{LNheatflux,
+author = "Eric Roth",
+title = "Nucleation and Heat Transfer in Liquid Nitrogen",
+school = "Portland State University",
+year = "1993",
+doi = "http://dx.doi.org/10.15760/etd.1369",
+url = "http://pdxscholar.library.pdx.edu/open_access_etds/1370/",
+
+}
